leptos_macro/tests/view/13_multiple_generic_params_first_wrong_type.stderr
error[E0277]: `bool` is not a valid type for prop `fun_a` on component `Inner`
  --> tests/view/13_multiple_generic_params_first_wrong_type.rs:11:26
   |
11 |             <Inner fun_a=true fun_b=|| 42/>
   |                          ^^^^ the trait `Fn()` is not implemented for `bool`
   |
   = note: required: `Fn() -> bool` — a closure or function reference
note: required for `bool` to implement `Check_fun_a`
  --> tests/view/13_multiple_generic_params_first_wrong_type.rs:16:1
   |
16 | #[component]
   | ^^^^^^^^^^^^
...
19 |     F: Fn() -> bool,
   |        ------------ unsatisfied trait bound introduced here
note: required by a bound in `Inner::Helper::<F, G>::check_and_wrap_fun_a`
  --> tests/view/13_multiple_generic_params_first_wrong_type.rs:16:1
   |
16 | #[component]
   | ^^^^^^^^^^^^ required by this bound in `Helper::<F, G>::check_and_wrap_fun_a`
   = note: this error originates in the attribute macro `component` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: the method `extract_value` exists for struct `Wrap_fun_a<bool>`, but its trait bounds were not satisfied
  --> tests/view/13_multiple_generic_params_first_wrong_type.rs:11:26
   |
11 |             <Inner fun_a=true fun_b=|| 42/>
   |                          ^^^^ method cannot be called on `Wrap_fun_a<bool>` due to unsatisfied trait bounds
...
16 | #[component]
   | ------------ method `extract_value` not found for this struct
   |
note: the following trait bounds were not satisfied:
      `bool: Fn<()>`
      `bool: FnOnce<()>`
  --> tests/view/13_multiple_generic_params_first_wrong_type.rs:19:8
   |
16 | #[component]
   | ------------
...
19 |     F: Fn() -> bool,
   |        ^^^^^^^^^^^^
   |        |       |
   |        |       unsatisfied trait bound introduced here
   |        unsatisfied trait bound introduced here
